* 2014-02-24 - marcus.klein@open-xchange.com

 - Fix for bug 31238: Use the same properties map for the general login method of the LoginPerformer and the AuthenticationService.

* 2014-02-24 - tobias.friedrich@open-xchange.com

- Fix for bug 31249: Be aware of infostore items without files when filtering, set appropriate HTTP status in download response 

* 2014-02-21 - marc.arens@open-xchange.com

 - Fix for bug 31188: Use userId and contextId instead of names when enroling clients

* 2014-02-21 - marcus.klein@open-xchange.com

 - Fix for bug 30761: Do not occupy a database connection without using it.

* 2014-02-21 - thorben.betten@open-xchange.com

 - Fix for bug 31251: Fixed possible NPE on authentication failed error during POP3 sync

* 2014-02-20 - thorben.betten@open-xchange.com

 - Fix for bug 30138: Ensure each probe for root subfolder capability is exclusively performed

* 2014-02-19 - thorben.betten@open-xchange.com

 - Fix for bug 31216: Added dependency to "PrgDatesMembersPrimaryKeyUpdateTask" update task

* 2014-02-19 - tobias.friedrich@open-xchange.com

 - Fix for bug 31199: Process multicast results from GCM
 - Fix for bug 31181: Consider empty parameter values during parsing

* 2014-02-18 - thorben.betten@open-xchange.com

 - Fix for bug 31086: Ignore failed attempt to save non-existent setting

* 2014-02-18 - martin.herfurth@open-xchange.com

 - Fix for bug 31185: Avoid Autoconfig cache from storing personal data.

* 2014-02-17 - thorben.betten@open-xchange.com

 - Fix for bug 31110: Proper re-initialize POP3 server's capabilities of successful authentication

* 2014-02-14 - tobias.friedrich@open-xchange.com

 - Fix for bug 31106: Parse allowed units for bandwidth parameters as described in property file

* 2014-02-11 - tobias.friedrich@open-xchange.com

 - Fix for bug 30966: Don't validate e-mail addresses of distribution list members when loading from the database

* 2014-02-10 - thorben.betten@open-xchange.com
