@@ -25,6 +25,7 @@ Import-Package: com.openexchange.caching,
  com.openexchange.osgi,
  com.openexchange.server,
  com.openexchange.session,
+ com.openexchange.sessiond,
  com.openexchange.sessiond.impl,
  com.openexchange.timer,
  com.openexchange.tools.session,
@@ -34,6 +35,7 @@ Import-Package: com.openexchange.caching,
  gnu.trove.list,
  gnu.trove.list.linked,
  org.osgi.framework,
+ org.osgi.service.event;version="1.3.0",
  org.osgi.util.tracker,
  org.slf4j
 Bundle-Activator: com.openexchange.capabilities.osgi.CapabilitiesActivator
